[project]
name = "transcedens-core"
version = "0.1.0"
description = "Transcedens-Core: The open-core cognitive engine for autonomous NPCs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-neo4j>=0.7.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-redis>=0.4.0",
    "mcp>=1.26.0",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "redis>=7.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
